--- a/researcher/templates/researcher/layouts/showProject.html
+++ b/researcher/templates/researcher/layouts/showProject.html
@@ -1,6 +1,6 @@
 {% load static %}
 <div class="fixed-back showProject">
-    <div class="card text-right stick-footer">
+    <div class="card text-right stick-footer b-x0">
         <div class="close"></div>
         <div class="card-head">عنوان پروژه</div>
         <div class="vote">
