--- a/researcher/templates/researcher/userInfo.html
+++ b/researcher/templates/researcher/userInfo.html
@@ -139,7 +139,7 @@
                             <div class="col-lg-12 text-right">
                                 <div class="education text-center w-100">
                                     {% if scientificrecord_set %}
-                                        <table class='table mtop-lg-25'>
+                                        <table class='table m-top-10'>
                                             <thead>
                                             <tr>
                                                 <td>مقطع تحصیلی</td>
@@ -188,7 +188,7 @@
                             <div class="col-lg-12 text-right">
                                 <div class="executive text-center w-100">
                                     {% if executiverecord_set %}
-                                        <table class='table mtop-lg-25'>
+                                        <table class='table m-top-10'>
                                             <thead>
                                             <tr>
                                                 <td>سمت</td>
@@ -236,7 +236,7 @@
                             <div class="col-lg-12 text-right">
                                 <div class="studious text-center w-100">
                                     {% if studiousrecord_set %}
-                                        <table class='table mtop-lg-25'>
+                                        <table class='table m-top-10'>
                                             <thead>
                                             <tr>
                                                 <td>عنوان طرح پژوهشی</td>
@@ -295,7 +295,7 @@
                                     <div class="w-100 text-center">
                                         <div class="row">
                                             <div class="col-md-6 col-12">
-                                                <span class="radio-label">روحیه کار تیمی</span>
+                                                <span>روحیه کار تیمی</span>
                                             </div>
                                             <div class="col-md-6 col-12">
                                                 <div class="radio-item">
@@ -337,7 +337,7 @@
                                         </div>
                                         <div class="row">
                                             <div class="col-md-6 col-12">
-                                                <span class="radio-label">تفکر خلاقانه</span>
+                                                <span>تفکر خلاقانه</span>
                                             </div>
                                             <div class="col-md-6 col-12">
                                                 <div class="radio-item">
@@ -389,7 +389,7 @@
                                         </div>
                                         <div class="row">
                                             <div class="col-md-6 col-12">
-                                                <span class="radio-label">علاقه به رشته تحصیلی</span>
+                                                <span>علاقه به رشته تحصیلی</span>
                                             </div>
                                             <div class="col-md-6 col-12">
                                                 <div class="radio-item">
@@ -441,7 +441,7 @@
                                         </div>
                                         <div class="row">
                                             <div class="col-md-6 col-12">
-                                                <span class="radio-label">انگیزه داشتن برای انجام پروژه</span>
+                                                <span>انگیزه داشتن برای انجام پروژه</span>
                                             </div>
                                             <div class="col-md-6 col-12">
                                                 <div class="radio-item">
@@ -488,7 +488,7 @@
                                         </div>
                                         <div class="row">
                                             <div class="col-md-6 col-12">
-                                                <span class="radio-label">تعهد داشتن و از خودگذشتگی</span>
+                                                <span>تعهد داشتن و از خودگذشتگی</span>
                                                 </div>
                                             <div class="col-md-6 col-12">
                                                 <div class="radio-item">
@@ -530,7 +530,7 @@
                                         </div>
                                         <div class="row">
                                             <div class="col-md-6 col-12">
-                                                <span class="radio-label">پشتکار</span>
+                                                <span>پشتکار</span>
                                             </div>
                                             <div class="col-md-6 col-12">
                                                 <div class="radio-item">
@@ -572,7 +572,7 @@
                                         </div>
                                         <div class="row">
                                             <div class="col-md-6 col-12">
-                                                <span class="radio-label">علاقه به یادگیری</span>
+                                                <span>علاقه به یادگیری</span>
                                                 </div>
                                             <div class="col-md-6 col-12">
                                                 <div class="radio-item">
@@ -624,7 +624,7 @@
                                         </div>
                                         <div class="row">
                                             <div class="col-md-6 col-12">
-                                                <span class="radio-label">وقت شناسی</span>
+                                                <span>وقت شناسی</span>
                                                 </div>
                                             <div class="col-md-6 col-12">
                                                 <div class="radio-item">
@@ -671,7 +671,7 @@
                                         </div>
                                         <div class="row">
                                             <div class="col-md-6 col-12">
-                                                <span class="radio-label">جمع آوری داده ها</span>
+                                                <span>جمع آوری داده ها</span>
                                                 </div>
                                             <div class="col-md-6 col-12">
                                                 <div class="radio-item">
@@ -723,7 +723,7 @@
                                         </div>
                                         <div class="row">
                                             <div class="col-md-6 col-12">
-                                                <span class="radio-label">آگاهی از اصول انجام پروژه</span>
+                                                <span>آگاهی از اصول انجام پروژه</span>
                                             </div>
                                             <div class="col-md-6 col-12">
                                                 <div class="radio-item">
