--- a/expert/templates/expert/index.html
+++ b/expert/templates/expert/index.html
@@ -51,9 +51,10 @@
                             </div>
                             <div class="notification">
                                 <i class="far fa-comment-alt center-abs"></i>
-{#                                {% if getUnseenMessages project.pk request.user.expertuser %}#}
-                                    <span>{% getUnseenMessages project.pk request.user.expertuser %} </span>
-{#                                {% endif %}#}
+                                {% getUnseenMessages project.pk request.user.expertuser as UnseenMessages%}
+                                {% if UnseenMessages != 0 %}
+                                    <span> {{UnseenMessages}} </span>
+                                {% endif %}
                             </div>
                         </div>
                         <div class="box-body">
