--- a/expert/templates/expert/layouts/comment.html
+++ b/expert/templates/expert/layouts/comment.html
@@ -4,7 +4,7 @@
     <div class="project-comment-innerDiv">
         <div class="comments"></div>
         <div class="add-comment">
-            <form action="" method="POST" enctype="multipart/form-data" id="comment-form">
+            <form action="" method="POST" enctype="multipart/form-data" id="comment_form">
                 {% csrf_token %}
                 <div class="row">
                     <div class="col-lg-12">
