--- a/industry/templates/industry/layouts/message_show.html
+++ b/industry/templates/industry/layouts/message_show.html
@@ -1,15 +1,8 @@
 {% load static%}
-<div class="dialog-main message-show notice-message-show">
-    <div class="card text-right dialog">
+<div class="fixed-back message-show">
+    <div class="card text-right">
+        <div class="card-head"></div>
         <div class="close"></div>
-        <div class="message-show-head">
-            <div class="icon">
-                <div class="title" dir="rtl">
-                    <!-- <a  href="##"><span class="fas fa-paperclip fa-lg"></span></a> -->
-                </div>
-                <img src="{% static 'industry/img/tick.svg' %}" alt="message-type-icon">
-            </div>
-        </div>
         <div class="message-show-body">
             <div class="body">
             </div>
