--- a/researcher/templates/researcher/layouts/message_show.html
+++ b/researcher/templates/researcher/layouts/message_show.html
@@ -1,18 +1,13 @@
 {% load static%}
-<div class="dialog-main message-show notice-message-show">
-    <div class="card text-right dialog">
+<div class="fixed-back message-show">
+    <div class="card text-right">
+        <div class="card-head"></div>
         <div class="close"></div>
-        <div class="message-show-head">
-            <div class="icon">
-                <div class="title" dir="rtl">
-                    برگزاری رویداد معرفی «چمران تیم»
-                </div>
-                <img src="{% static 'researcher/img/tick.svg' %}" alt="message-type-icon">
-            </div>
-        </div>
         <div class="message-show-body">
             <div class="body">
-                نخستین رویداد «چمران تیم»، با عنوان «صنعت دانشگاهی یا دانشگاه صنعتی؟»، یکم تیر ماه، در تالار قریب و دانشجو دانشگاه علوم پزشکی تهران، برگزار شد. این رویداد که در دو بخش کارگاه (Policy Brief) و پنل برگزار شد، پذیرای بیش از ۷۰ نفر از دانشجویان و اساتید دغدغه‌مند و فعال در حوزه ارتباط دانشگاه با صنعت و همچنین تعدادی از مسئولین دانشگاه ع.پ. تهران و وزارت بهداشت بود. هدف از برگزاری این رویداد، احیای دغدغه ارتباط دانشگاه با صنعت در بین دانشگاهیان و جلب مشارکت ایشان برای ایفای نقش در حل این مسئله، بود.
+                <pre>
+
+                </pre>
             </div>
             <hr>
             <div class="message-info">
