--- a/researcher/templates/researcher/index.html
+++ b/researcher/templates/researcher/index.html
@@ -69,7 +69,7 @@
                                             <div class="status text-center">
                                                 <div class="label">زمان لازم</div>
                                                 <div class="value">
-                                                    <span>8 ساعت</span>
+                                                    <span>{{project.need_hour}} ساعت</span>
                                                     <span>در هفته</span>
                                                 </div>
                                             </div>
